# auto-traits-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/pointer_impls/: associated.rs  associated_bounds.rs  custom.rs  generics.rs  lifetimes.rs  simple.rs
src/: lib.rs  pointer_impls.rs
